--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 		<barchartFeedBaseVersion>1.3.22</barchartFeedBaseVersion>
 
 		<!-- <groupId>com.barchart.feed</groupId> -->
-		<!-- <artifactId>barchart-feed-base</artifactId> -->
+		<!-- <artifactId>barchart-feed-client</artifactId> -->
 		<barchartFeedClientVersion>1.0.4</barchartFeedClientVersion>
 
 		<!-- <groupId>io.netty</groupId> -->
