--- a/barchart-feed-ddf-historical/pom.xml
+++ b/barchart-feed-ddf-historical/pom.xml
@@ -31,6 +31,13 @@
 	<dependencies>
 
 		<dependency>
+  			<groupId>com.barchart.missive</groupId>
+			<artifactId>barchart-missive</artifactId>
+			<version>${barchartMissiveVersion}</version>
+			<scope>provided</scope>
+  		</dependency>
+
+		<dependency>
 			<groupId>com.barchart.feed</groupId>
 			<artifactId>barchart-feed-ddf-settings</artifactId>
 			<version>${project.parent.version}</version>
