--- a/barchart-feed-ddf-instrument/pom.xml
+++ b/barchart-feed-ddf-instrument/pom.xml
@@ -26,7 +26,13 @@
 		<connection>scm:git:git://github.com/barchart/barchart-feed-ddf.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com/barchart/barchart-feed-ddf.git</developerConnection>
 	  <tag>HEAD</tag>
-  </scm>
+  	</scm>
+  
+  	<properties>
+		<bdbjeVersion>4.0.92</bdbjeVersion>
+		<protoBufVersion>2.4.1</protoBufVersion>
+		<barchartProtoInstVersion>1.0.1-SNAPSHOT</barchartProtoInstVersion>
+	</properties>
 
 	<dependencies>
 
@@ -42,6 +48,28 @@
 			<version>${barchartMissiveVersion}</version>
 			<scope>provided</scope>
   		</dependency>
+  		
+  		<!-- protocol buffers - original -->
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>${protoBufVersion}</version>
+			<scope>provided</scope>
+		</dependency>	
+  		
+  		<dependency>
+  			<groupId>com.barchart.proto</groupId>
+  			<artifactId>barchart-proto-buf-inst</artifactId>
+			<version>${barchartProtoInstVersion}</version>
+  		</dependency>
+  		 
+  		<!-- berkeley db --> 
+  		<dependency>
+			<groupId>com.sleepycat</groupId>
+			<artifactId>je</artifactId>
+			<version>${bdbjeVersion}</version>
+			<optional>true</optional>
+		</dependency>
 
 	</dependencies>
 
