--- a/barchart-feed-ddf-datalink/pom.xml
+++ b/barchart-feed-ddf-datalink/pom.xml
@@ -37,11 +37,11 @@
 			<scope>provided</scope>
   		</dependency>
 
-		<dependency>
+		<!-- <dependency>
         	<groupId>com.yammer.metrics</groupId>
         	<artifactId>metrics-core</artifactId>
         	<version>2.2.0</version>
-    	</dependency>
+    	</dependency> -->
 
 		<dependency>
 			<groupId>com.barchart.feed</groupId>
