--- a/pom.xml
+++ b/pom.xml
@@ -34,19 +34,19 @@
 		<!-- http://search.maven.org/#search|ga|1|barchart-util -->
 		<!-- <groupId>com.barchart.util</groupId> -->
 		<!-- <artifactId>barchart-util</artifactId> -->
-		<barchartUtilVersion>2.0.27</barchartUtilVersion>
+		<barchartUtilVersion>2.0.28</barchartUtilVersion>
 
 		<!-- http://search.maven.org/#search|ga|1|barchart-feed -->
 		<!-- <groupId>com.barchart.feed</groupId> -->
 		<!-- <artifactId>barchart-feed</artifactId> -->
-		<barchartFeedVersion>1.4.5</barchartFeedVersion>
+		<barchartFeedVersion>1.4.6</barchartFeedVersion>
 
 		<!-- http://search.maven.org/#search|ga|1|io.netty -->
 		<!-- <groupId>io.netty</groupId> -->
 		<!-- <artifactId>netty</artifactId> -->
 		<barchartNettyVersion>3.5.11.Final</barchartNettyVersion>
 		
-		<barchartMissiveVersion>1.3.2</barchartMissiveVersion>
+		<barchartMissiveVersion>[1.4.0,1.5.0)</barchartMissiveVersion>
 		<barchartProtoInstVersion>1.2.0</barchartProtoInstVersion>
 		<bdbjeVersion>4.0.92</bdbjeVersion>
 		<protoBufVersion>2.4.1</protoBufVersion>
