--- a/barchart-feed-ddf-util/pom.xml
+++ b/barchart-feed-ddf-util/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<artifactId>barchart-feed-ddf</artifactId>
 		<groupId>com.barchart.feed</groupId>
-		<version>3.5.6-SNAPSHOT</version>
+		<version>4.0.0-SNAPSHOT</version>
 	</parent>
 
 	<name>barchart-feed-ddf-util</name>
@@ -29,12 +29,25 @@
   </scm>
 
 	<dependencies>
+	
+		<dependency>
+			<groupId>com.barchart.util</groupId>
+			<artifactId>barchart-util-enums</artifactId>
+			<version>${barchartUtilVersion}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.barchart.util</groupId>
+			<artifactId>barchart-util-anno</artifactId>
+			<version>2.1.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.barchart.feed</groupId>
-			<artifactId>barchart-feed-base</artifactId>
-			<version>${barchartFeedVersion}</version>
+			<artifactId>barchart-feed-api-condor</artifactId>
+			<version>1.0.1-SNAPSHOT</version>
 		</dependency>
+
 		<dependency>
 			<groupId>com.barchart.feed</groupId>
 			<artifactId>barchart-feed-inst</artifactId>
