--- a/barchart-feed-ddf-instrument/pom.xml
+++ b/barchart-feed-ddf-instrument/pom.xml
@@ -37,6 +37,12 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>com.barchart.feed</groupId>
+			<artifactId>barchart-feed-market</artifactId>
+  			<version>1.0.1-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
   			<groupId>com.barchart.missive</groupId>
 			<artifactId>barchart-missive</artifactId>
 			<version>${barchartMissiveVersion}</version>
