--- a/barchart-feed-ddf-historical/pom.xml
+++ b/barchart-feed-ddf-historical/pom.xml
@@ -31,6 +31,12 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>com.barchart.feed</groupId>
+			<artifactId>barchart-feed-market</artifactId>
+  			<version>1.0.1-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
   			<groupId>com.barchart.missive</groupId>
 			<artifactId>barchart-missive</artifactId>
 			<version>${barchartMissiveVersion}</version>
