--- a/barchart-feed-ddf-util/pom.xml
+++ b/barchart-feed-ddf-util/pom.xml
@@ -32,6 +32,12 @@
 	
 		<dependency>
 			<groupId>com.barchart.util</groupId>
+			<artifactId>barchart-util-clone</artifactId>
+			<version>2.0.28</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>com.barchart.util</groupId>
 			<artifactId>barchart-util-thread</artifactId>
 			<version>2.0.29</version>
 		</dependency>
