--- a/barchart-feed-ddf-util/pom.xml
+++ b/barchart-feed-ddf-util/pom.xml
@@ -62,8 +62,8 @@
 
 		<dependency>
 			<groupId>com.barchart.feed</groupId>
-			<artifactId>barchart-feed-api-condor</artifactId>
-			<version>1.0.1-SNAPSHOT</version>
+			<artifactId>barchart-feed-api</artifactId>
+			<version>[2.0.0,2.1.0)</version>
 		</dependency>
 
 		<dependency>
