--- a/barchart-feed-ddf-util/pom.xml
+++ b/barchart-feed-ddf-util/pom.xml
@@ -39,7 +39,7 @@
 		<dependency>
 			<groupId>com.barchart.util</groupId>
 			<artifactId>barchart-util-collections</artifactId>
-			<version>2.0.31-SNAPSHOT</version>
+			<version>2.0.31</version>
 		</dependency>
 	
 		<dependency>
